clusters/cluster/apps/verein-int/membership/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: membership-tool
  namespace: verein-int
spec:
  minReadySeconds: 3
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: membership-informatik-sexy
  template:
    metadata:
      labels:
        app: membership-informatik-sexy
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: membership-informatik-sexy
          image: ghcr.io/neuland-ingolstadt/membership-tools:main-13 # {"$imagepolicy": "flux-system:membership-informatik-sexy"}
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            timeoutSeconds: 5
